Create additional subfolders if needed (e.g. when extra slashes in FileNameFormater).

Summary:
The importer will (recursively) create additional subfolders if the autoformatter pattern
contains slashes.
Add additional unit tests to importertest.
BUG: 237114
FEATURE: 336039
FIXED-IN: 19.12.0

Test Plan:
Added additional unit tests to check the creation of subfolders when slashes are present
in the autoformatter pattern.

Reviewers: #gwenview, ngraham

Reviewed By: #gwenview, ngraham

Subscribers: ngraham

Tags: #gwenview

Differential Revision: https://phabricator.kde.org/D25016